--- a/app/views/freelancers/_about.html.erb
+++ b/app/views/freelancers/_about.html.erb
@@ -2,16 +2,16 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>About</h2>
+                <h2>About Me</h2>
                 <hr class="star-light">
             </div>
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
-                <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                <p>Hi I'm Ed. I'm 24 years old and have over 2 years of industry experience as a Java Developer. In that time I have developed a strong interest in web development, and specifically, the Ruby on Rails Framework.</p>
             </div>
             <div class="col-lg-4">
-                <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                <p>This Webpage is designed to showcase my interest and understanding to a potential employer, as I seek to enter the field in a professional capacity. Please feel free to get in touch.</p>
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <a href="#" class="btn btn-lg btn-outline">
