--- a/app/views/freelancers/_footer.html.erb
+++ b/app/views/freelancers/_footer.html.erb
@@ -27,8 +27,8 @@
                     </ul>
                 </div>
                 <div class="footer-col col-md-4">
-                    <h3>About Freelancer</h3>
-                    <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                    <h3>About Mundisoft</h3>
+                    <p>Mundisoft is a simple Bootstrap/Rails showcase I created to try and land myself a job at Boost. <br> Hire Me</a>!</p>
                 </div>
             </div>
         </div>
