further incremental updates to page content

--- a/app/views/freelancers/_footer.html.erb
+++ b/app/views/freelancers/_footer.html.erb
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="footer-col col-md-4">
                     <h3>Location</h3>
-                    <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                    <p>Cuba Street<br>Te Aro, Wellington 6011</p>
                 </div>
                 <div class="footer-col col-md-4">
                     <h3>Around the Web</h3>
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Copyright &copy; Your Website 2014
+                 
                 </div>
             </div>
         </div>
