minor content changes, implemented download button

--- a/app/views/freelancers/_about.html.erb
+++ b/app/views/freelancers/_about.html.erb
@@ -11,11 +11,11 @@
                 <p>Hi I'm Ed. I'm 24 years old and have over 2 years of industry experience as a Java Developer. In that time I have developed a strong interest in web development, and specifically, the Ruby on Rails Framework.</p>
             </div>
             <div class="col-lg-4">
-                <p>This Webpage is designed to showcase my interest and understanding to a potential employer, as I seek to enter the field in a professional capacity. Please feel free to get in touch.</p>
+                <p>This Webpage is designed to showcase my interest and understanding to a potential employer, as I seek to enter the field in a professional capacity. Please feel free to download my CV<br>or get in touch below.</p>
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <a href="#" class="btn btn-lg btn-outline">
-                    <i class="fa fa-download"></i> Download Theme
+                <a href="/cv.pdf" target="_blank" class="btn btn-lg btn-outline">
+                    <i class="fa fa-download"></i> Download CV
                 </a>
             </div>
         </div>
