--- a/app/views/freelancers/_navigation.html.erb
+++ b/app/views/freelancers/_navigation.html.erb
@@ -18,7 +18,7 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#portfolio">Portfolio</a>
+                    <a href="#portfolio">Interests</a>
                 </li>
                 <li class="page-scroll">
                     <a href="#about">About</a>
