--- a/app/views/freelancers/_portfolio.html.erb
+++ b/app/views/freelancers/_portfolio.html.erb
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>Portfolio</h2>
+                <h2>Interests</h2>
                 <hr class="star-primary">
             </div>
         </div>
@@ -14,7 +14,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <%= image_tag "freelancer/portfolio/cabin.png", class: "img-responsive", alt: "" %>
+                    <%= image_tag "freelancer/portfolio/gat.png", class: "img-responsive", alt: "" %>
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -24,7 +24,7 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <%= image_tag "freelancer/portfolio/cake.png", class: "img-responsive", alt: "" %>
+                    <%= image_tag "freelancer/portfolio/plate.png", class: "img-responsive", alt: "" %>
                 </a>
             </div>
             <div class="col-sm-4 portfolio-item">
@@ -34,39 +34,10 @@
                             <i class="fa fa-search-plus fa-3x"></i>
                         </div>
                     </div>
-                    <%= image_tag "freelancer/portfolio/circus.png", class: "img-responsive", alt: "" %>
+                    <%= image_tag "freelancer/portfolio/horde.png", class: "img-responsive", alt: "" %>
                 </a>
             </div>
-            <div class="col-sm-4 portfolio-item">
-                <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i class="fa fa-search-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <%= image_tag "freelancer/portfolio/game.png", class: "img-responsive", alt: "" %>
-                </a>
-            </div>
-            <div class="col-sm-4 portfolio-item">
-                <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i class="fa fa-search-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <%= image_tag "freelancer/portfolio/safe.png", class: "img-responsive", alt: "" %>
-                </a>
-            </div>
-            <div class="col-sm-4 portfolio-item">
-                <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <i class="fa fa-search-plus fa-3x"></i>
-                        </div>
-                    </div>
-                    <%= image_tag "freelancer/portfolio/submarine.png", class: "img-responsive", alt: "" %>
-                </a>
-            </div>
+
         </div>
     </div>
 </section>
