--- a/app/views/layouts/freelancer.html.erb
+++ b/app/views/layouts/freelancer.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Mundisoft Developer Showcase</title>
   <%= stylesheet_link_tag 'freelancer/manifest.css', media: 'all' %>
