--- a/app/views/freelancers/_footer.html.erb
+++ b/app/views/freelancers/_footer.html.erb
@@ -62,7 +62,7 @@
                           Your browser does not support the audio element.
                         </audio>
                         <p>Warning: Death Metal</p>
-                        <p>I'm a massive music fan and have been playing Electric guitar for ~10 years.<br>The clip above is a demo from a band I used to play in as a student.<br>I also dabble in the Saxophone, and would love to start another band in Wellington if I could ever find the time.</p>
+                        <p>I'm a massive music fan and have been playing Electric guitar for ~10 years.<br>The clip above is a demo from a band I used to play in as a student.<br>I also dabble in the Saxophone, and would love to start another band in Wellington if the opportunity arrises.</p>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                         <h2>Powerlifting</h2>
                         <hr class="star-primary">
                         <%= image_tag "freelancer/portfolio/plate.png", class: "img-responsive", alt: "" %>
-                        <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                        <p>I have been training at a powerlifting gym for around 1 year now<br>I still have a long way to go, but I am making steady progress and I am looking forward to my first competition in November.</p>
                         <ul class="list-inline item-details">
                             <li>Client:
                                 <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
@@ -122,7 +122,7 @@
                         <h2>FOR THE HORDE!</h2>
                         <hr class="star-primary">
                         <%= image_tag "freelancer/portfolio/horde.png", class: "img-responsive", alt: "" %>
-                        <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                        <p>Lifelong PC gamer, some of my favourites include UT2k4, CS, Morrowind, WoW, and Path of Exile<br>Recently I have been enjoying Overwatch.</p>
                         <ul class="list-inline item-details">
                             <li>Client:
                                 <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
