fix adblock plus bug from blocking social media buttons

--- a/app/assets/stylesheets/freelancer/freelancer.css
+++ b/app/assets/stylesheets/freelancer/freelancer.css
@@ -453,7 +453,7 @@ footer .footer-below {
     transform: rotate(90deg);
 }
 
-.portfolio-modal .modal-backdrop {
+.portfolio-modal .modal-backfa-dribbbledrop {
     display: none;
     opacity: 0;
 }
