--- a/app/views/freelancers/_footer.html.erb
+++ b/app/views/freelancers/_footer.html.erb
@@ -11,7 +11,7 @@
                     <h3>Linkedin</h3>
                     <ul class="list-inline">
                         <li>
-                            <a href="www.linkedin.com/in/ed-wilson" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                            <a href="www.linkedin.com/in/ed-wilson" class="btn-social btn-outline"><i class="fa fa-fw fa-link"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -86,20 +86,6 @@
                         <hr class="star-primary">
                         <%= image_tag "freelancer/portfolio/plate.png", class: "img-responsive", alt: "" %>
                         <p>I have been training at a powerlifting gym for around 1 year now<br>I still have a long way to go, but I am making steady progress and I am looking forward to my first competition in November.</p>
-                        <ul class="list-inline item-details">
-                            <li>Client:
-                                <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                </strong>
-                            </li>
-                            <li>Date:
-                                <strong><a href="http://startbootstrap.com">April 2014</a>
-                                </strong>
-                            </li>
-                            <li>Service:
-                                <strong><a href="http://startbootstrap.com">Web Development</a>
-                                </strong>
-                            </li>
-                        </ul>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                     </div>
                 </div>
@@ -122,21 +108,7 @@
                         <h2>FOR THE HORDE!</h2>
                         <hr class="star-primary">
                         <%= image_tag "freelancer/portfolio/horde.png", class: "img-responsive", alt: "" %>
-                        <p>Lifelong PC gamer, some of my favourites include UT2k4, CS, Morrowind, WoW, and Path of Exile<br>Recently I have been enjoying Overwatch.</p>
-                        <ul class="list-inline item-details">
-                            <li>Client:
-                                <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                </strong>
-                            </li>
-                            <li>Date:
-                                <strong><a href="http://startbootstrap.com">April 2014</a>
-                                </strong>
-                            </li>
-                            <li>Service:
-                                <strong><a href="http://startbootstrap.com">Web Development</a>
-                                </strong>
-                            </li>
-                        </ul>
+                        <p>Lifelong PC gamer, some of my favourites include UT2k4, CS, Morrowind, WoW, and Path of Exile.<br>Recently I have been playing a little bit of Overwatch in my spare time.</p>
                         <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                     </div>
                 </div>
