--- a/app/views/freelancers/_footer.html.erb
+++ b/app/views/freelancers/_footer.html.erb
@@ -11,7 +11,7 @@
                     <h3>Linkedin</h3>
                     <ul class="list-inline">
                         <li>
-                            <a href="www.linkedin.com/in/ed-wilson" class="btn-social btn-outline"><i class="fa fa-fw fa-link"></i></a>
+                            <a href="http://www.linkedin.com/in/ed-wilson" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-link"></i></a>
                         </li>
                     </ul>
                 </div>
