update contact details and readme

--- a/app/views/freelancers/_footer.html.erb
+++ b/app/views/freelancers/_footer.html.erb
@@ -5,6 +5,7 @@
                 <div class="footer-col col-md-4">
                     <h3>Contact</h3>
                     <p>02041337777</p>
+                    <p>emundwilson@gmail.com</p>
                     <p>Wellington, New Zealand</p>
                 </div>
                 <div class="footer-col col-md-4">
