updated typo in footer

--- a/app/views/freelancers/_footer.html.erb
+++ b/app/views/freelancers/_footer.html.erb
@@ -18,7 +18,7 @@
                 </div>
                 <div class="footer-col col-md-4">
                     <h3>About Mundisoft</h3>
-                    <p>Mundisoft is a simple Bootstrap/Rails showcase I created to try and land myself a sweet Rail Position. <br> Hire Me!</p>
+                    <p>Mundisoft is a simple Bootstrap/Rails showcase I created to try and land myself a sweet Rails Position. <br> Hire Me!</p>
                 </div>
             </div>
         </div>
